reformat the output Json file to meet following requirements:  Output mu
